# kollab

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: kollab-provider-comparison.html
examples/: README.md
examples/convergence/: kollab-example-02-polling-webhooks-websockets.md  notes.md
examples/convergence/artifacts/: kollab-ex2-convergence-loop-transcript.md  sess_89ecd22a.jsonl
examples/critique-loop/: kollab-example-01-retry-backoff.md  notes.md
examples/critique-loop/artifacts/: kollab-ex1-full-transcript.md  sess_30285e2d.jsonl
examples/directive-injection/: kollab-example-03-multitenant-data-model.md  notes.md
examples/mid-stream-halt/: kollab-example-05-multitenant-data-model.md  notes.md
examples/mid-stream-halt/artifacts/: kollab-ex5-mid-halt-session-transcript.md  sess_6eb85a70.jsonl
examples/round-limit/: kollab-example-04-monolith-vs-microservices.md  notes.md
examples/round-limit/artifacts/: kollab-ex4-full-transcript.md  sess_69a312af.jsonl
kollab/: __main__.py  ace.py  attachments.py  config.py  prompts.py  server.py  transcript.py  webhooks.py
kollab/agents/: __init__.py  api_agent.py  base.py  claude_agent.py  codex_agent.py  gemini_agent.py
kollab/static/: about.html  app.js  index.html  style.css
specs/: ace-api-webhooks.md  ace-orchestration.md
tests/: test_anomaly.py  test_api_auth.py  test_codex_agent.py  test_config.py  test_prompts.py  test_response_reference.py  test_turn_id.py  test_verdict_parser.py  test_webhooks.py
