[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kollab"
version = "0.1.0"
description = "Adversarial-collaborative dialogue between Claude Code and OpenAI Codex"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "claude-agent-sdk",
    "tomli",
    "tomli-w",
    "pydantic",
    "httpx>=0.27",
]

[project.scripts]
kollab = "kollab.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["kollab*"]
